added .htaccess for https redirection; minor tweak to faq

--- a/faq.html
+++ b/faq.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
 
-        <!-- favicon -->
+    <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -29,76 +29,78 @@
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!-- font awesome -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH2Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
     <!-- js -->
     <script type="text/javascript" src="app/smooth-scroll.js"></script>
 
-    </head>
+</head>
 
-    <body class="childpage-content">
+<body class="childpage-content">
 
-        <div>
-            <div id="hero-nav-bar-childpages"> 
-                <ul id="social-media-nav-list">
-                    <li>
-                        <a href="https://www.facebook.com/Deepseeio/"><img class="nav-icon-height" src="assets/img/facebook.svg" /></a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/deepseeio?lang=en"><img class="nav-icon-height" src="assets/img/twitter.svg" /></a>
-                    </li>
-                    <li>
-                        <a href="https://medium.com/@deepseeio"><img class="nav-icon-height" src="assets/img/medium.svg" /></a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><img class="nav-icon-height" src="assets/img/youtube.svg" /></a>
-                    </li>
-                </ul>
-                <ul id="link-nav-list">
-                    <li><a id="home-link" class="nav-a" href="#hero-image-header">HOME</a></li>
-                    <li><a id="about-link" class="nav-a" href="#about">ABOUT</a></li>
-                    <!-- Waiting for FAQ -->
-                    <!-- <li><a id="faq-link" class="nav-a" href="faq.html">FAQ</a></li> -->
-                    <li><a id="contact-link" class="nav-a" href="#contact">CONTACT</a></li>
-                    <li><a class="nav-a" href="assets/pdf/whitepaper.pdf" download>WHITEPAPER</a></li>
-                    <!-- Removing unused blog-->
-                    <!-- <li><a class="nav-a" href="https://medium.com/@deepseeio">BLOG</a></li> -->
-                </ul>
-            </div> 
+    <div>
+        <div id="hero-nav-bar-childpages"> 
+            <ul id="social-media-nav-list">
+                <li>
+                    <a href="https://www.facebook.com/Deepseeio/"><img class="nav-icon-height" src="assets/img/facebook.svg" /></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/deepseeio?lang=en"><img class="nav-icon-height" src="assets/img/twitter.svg" /></a>
+                </li>
+                <li>
+                    <a href="https://medium.com/@deepseeio"><img class="nav-icon-height" src="assets/img/medium.svg" /></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><img class="nav-icon-height" src="assets/img/youtube.svg" /></a>
+                </li>
+            </ul>
+            <ul id="link-nav-list">
+                <li><a id="home-link" class="nav-a" href="#hero-image-header">HOME</a></li>
+                <li><a id="about-link" class="nav-a" href="#about">ABOUT</a></li>
+                <!-- Waiting for FAQ -->
+                <!-- <li><a id="faq-link" class="nav-a" href="faq.html">FAQ</a></li> -->
+                <li><a id="contact-link" class="nav-a" href="#contact">CONTACT</a></li>
+                <li><a class="nav-a" href="assets/pdf/whitepaper.pdf" download>WHITEPAPER</a></li>
+                <!-- Removing unused blog-->
+                <!-- <li><a class="nav-a" href="https://medium.com/@deepseeio">BLOG</a></li> -->
+            </ul>
+        </div> 
 
-            <div class="container">
-                <i class="fa fa-fw fa-question faq-sidebar-icon"></i>
-                <h1 class="text-center">Frequently Asked Questions</h1>
+        <div class="container">
+            
+            <h1 class="text-center">Frequently Asked Questions</h1>
 
-                <div class="row">
-                    <div class="faq-sidebar col-sm-4">
+            <div class="row">
+                <div class="faq-sidebar col-sm-4">
 
+                    <a href="#general-section">
                         <div class="faq-sidebar-nav-item">
                             <i class="fa fa-fw fa-question faq-sidebar-icon"></i>General
                         </div>
+                    </a>
                     <a href="#features-section">
                         <div class="faq-sidebar-nav-item">
                             <i class="fa fa-lg fa-fw fa-star faq-sidebar-icon"></i>Features
                         </div>
-</a>
+                    </a>
+                </div>
+
+                <div class="faq-sections col-sm-8">
+                    <div class="faq-section">
+                        <h2 id="general-section" class="faq-section-header">General</h2>
+                        <p>Aenean magna elit, ornare vitae tortor eget, pulvinar bibendum nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac tortor quam. In dapibus arcu vel tincidunt consequat. Duis semper libero id leo aliquet, vitae ultrices metus bibendum. Proin ornare posuere risus eget imperdiet. Proin pretium tortor ut lectus tincidunt condimentum. Fusce imperdiet enim vitae turpis hendrerit interdum. In lobortis, est eget mollis hendrerit, lectus massa placerat dolor, fermentum ultrices mi sapien viverra est. Suspendisse scelerisque arcu maximus sem mattis, eget tristique nisi porta. Nam ultrices, leo et rhoncus vulputate, ligula risus pellentesque massa, ullamcorper vulputate erat purus in nisi. Etiam venenatis sodales dui, non rhoncus sapien blandit nec. Cras ornare turpis aliquet, interdum est sit amet, efficitur risus. </p>
                     </div>
 
-                    <div class="faq-sections col-sm-8">
-                        <div class="faq-section">
-                            <h2 id="general-section" class="faq-section-header">General</h2>
-                            <p>Aenean magna elit, ornare vitae tortor eget, pulvinar bibendum nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac tortor quam. In dapibus arcu vel tincidunt consequat. Duis semper libero id leo aliquet, vitae ultrices metus bibendum. Proin ornare posuere risus eget imperdiet. Proin pretium tortor ut lectus tincidunt condimentum. Fusce imperdiet enim vitae turpis hendrerit interdum. In lobortis, est eget mollis hendrerit, lectus massa placerat dolor, fermentum ultrices mi sapien viverra est. Suspendisse scelerisque arcu maximus sem mattis, eget tristique nisi porta. Nam ultrices, leo et rhoncus vulputate, ligula risus pellentesque massa, ullamcorper vulputate erat purus in nisi. Etiam venenatis sodales dui, non rhoncus sapien blandit nec. Cras ornare turpis aliquet, interdum est sit amet, efficitur risus. </p>
-                        </div>
-
-                        <div class="faq-section">
-                            <h2 id="features-section" class="faq-section-header">Features</h2>
-                            <p>Praesent elementum, ipsum laoreet ultricies iaculis, elit velit ultricies eros, lacinia convallis neque ligula at nisi. Ut sit amet sapien eget ligula efficitur tincidunt. Curabitur vehicula nec sapien id pulvinar. Aliquam erat orci, pellentesque eu quam quis, posuere mattis leo. Sed eu elit nec dolor convallis convallis egestas in nibh. Morbi nec accumsan mauris. Morbi laoreet lacinia luctus. Integer vel scelerisque nisi. Ut purus augue, viverra non faucibus nec, egestas sed dui. Vivamus metus magna, ullamcorper eu elementum id, gravida eu neque. Donec magna augue, semper nec ipsum nec, volutpat imperdiet sem. Vestibulum tincidunt augue metus, a placerat dui pulvinar quis. </p>
-                            </div>
+                    <div class="faq-section">
+                        <h2 id="features-section" class="faq-section-header">Features</h2>
+                        <p>Praesent elementum, ipsum laoreet ultricies iaculis, elit velit ultricies eros, lacinia convallis neque ligula at nisi. Ut sit amet sapien eget ligula efficitur tincidunt. Curabitur vehicula nec sapien id pulvinar. Aliquam erat orci, pellentesque eu quam quis, posuere mattis leo. Sed eu elit nec dolor convallis convallis egestas in nibh. Morbi nec accumsan mauris. Morbi laoreet lacinia luctus. Integer vel scelerisque nisi. Ut purus augue, viverra non faucibus nec, egestas sed dui. Vivamus metus magna, ullamcorper eu elementum id, gravida eu neque. Donec magna augue, semper nec ipsum nec, volutpat imperdiet sem. Vestibulum tincidunt augue metus, a placerat dui pulvinar quis. </p>
                     </div>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
 
 </html>
