fixed footer css issues, modified signup form to use common look and feel

--- a/faq.html
+++ b/faq.html
@@ -44,33 +44,44 @@
 
 <body class="childpage-content">
 
-    <div>
-        <div id="hero-nav-bar-childpages"> 
-            <ul id="social-media-nav-list">
-                <li>
-                    <a href="https://www.facebook.com/Deepseeio/"><img class="nav-icon-height" src="assets/img/facebook.svg" /></a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/deepseeio?lang=en"><img class="nav-icon-height" src="assets/img/twitter.svg" /></a>
-                </li>
-                <li>
-                    <a href="https://medium.com/@deepseeio"><img class="nav-icon-height" src="assets/img/medium.svg" /></a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><img class="nav-icon-height" src="assets/img/youtube.svg" /></a>
-                </li>
-            </ul>
-            <ul id="link-nav-list">
-                <li><a id="home-link" class="nav-a" href="/">HOME</a></li>
-                <li><a id="about-link" class="nav-a" href="/#about">ABOUT</a></li>
-                <!-- Waiting for FAQ -->
-                <!-- <li><a id="faq-link" class="nav-a" href="faq.html">FAQ</a></li> -->
-                <li><a id="contact-link" class="nav-a" href="/#contact">CONTACT</a></li>
-                <li><a class="nav-a" href="assets/pdf/whitepaper.pdf" download>WHITEPAPER</a></li>
-                <!-- Removing unused blog-->
-                <!-- <li><a class="nav-a" href="https://medium.com/@deepseeio">BLOG</a></li> -->
-            </ul>
-        </div> 
+    <div class="frontpage-splash2">
+        
+        <nav class="navbar navbar-default collapse navbar-collapse">
+            <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">      
+                <a class="navbar-brand" href="#">
+                    <img alt="header-logo" src="assets/img/deepsee-header-logo.png" style="height: 40px; width: 144px"/>
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div>
+
+                <ul class="nav navbar-nav navbar-right social-nav">
+                    <li>
+                        <a href="https://www.facebook.com/Deepseeio/"><i class="fa fa-lg fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/deepseeio?lang=en"><i class="fa fa-lg fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/@deepseeio"><i class="fa fa-lg fa-medium"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><i class="fa fa-lg fa-youtube"></i></a>
+                    </li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right link-nav">
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#contact">CONTACT</a></li>   
+                    <li><a href="assets/pdf/whitepaper.pdf">WHITEPAPER</a></li>   
+                </ul>
+            </div>
+        </div><!-- /.container-fluid -->
+    </nav>
+        
 
         <div class="container">
 
