--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">      
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/#">
                     <img alt="header-logo" src="assets/img/deepsee-header-logo.png" style="height: 40px; width: 144px"/>
                 </a>
             </div>
@@ -69,13 +69,13 @@
                         <a href="https://medium.com/@deepseeio"><i class="fa fa-lg fa-medium"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><i class="fa fa-lg fa-youtube"></i></a>
+                        <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><i class="fa fa-lg fa-youtube-play"></i></a>
                     </li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right link-nav">
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#contact">CONTACT</a></li>   
+                    <li><a href="/#about">ABOUT</a></li>
+                    <li><a href="/#contact">CONTACT</a></li>   
                     <li><a href="assets/pdf/whitepaper.pdf">WHITEPAPER</a></li>   
                 </ul>
             </div>
@@ -366,7 +366,7 @@
             <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">      
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/#">
                     <img alt="header-logo" src="assets/img/deepsee-header-logo.png" style="height: 40px; width: 144px"/>
                 </a>
             </div>
@@ -385,13 +385,13 @@
                         <a href="https://medium.com/@deepseeio"><i class="fa fa-lg fa-medium"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><i class="fa fa-lg fa-youtube"></i></a>
+                        <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><i class="fa fa-lg fa-youtube-play"></i></a>
                     </li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right link-nav">
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#contact">CONTACT</a></li>   
+                    <li><a href="/#about">ABOUT</a></li>
+                    <li><a href="/#contact">CONTACT</a></li>   
                     <li><a href="assets/pdf/whitepaper.pdf">WHITEPAPER</a></li>   
                 </ul>
             </div>
