--- a/index.html
+++ b/index.html
@@ -290,14 +290,15 @@
                                 <img src="assets/img/nick-haase.png">
                                 <h3>Nick Haase</h3>
                                 <h5>Advisor</h5>
-                                <p>Founder &amp; CEO of Pixel Road Designs. Managing Partner at Search Engine Journal.</p>
+                                <p>Founder and CEO of Loot--a startup paving the way for the future of marketing and co-founder of StartupDrugz.
+                                Rich background in consulting, speaking, VR/AR, and medical devices.</p>
                             </div>
 
                             <div class="person">
                                 <img src="assets/img/brent-csutoras.png">
                                 <h3>Brent Csutoras</h3>
                                 <h5>Advisor</h5>
-                                <p>Decentralization and blockchain entrepreneur. Co-founder of Ubitquity LLC. VP of Business Development at Family Office.</p>
+                                <p>Founder &amp; CEO of Pixel Road Designs.  Managing Partner at Search Engine Journal.</p>
                             </div>
                             <div class="person">
                                 <img src="assets/img/trent-lapinski.png">
