css tweaks for front page video

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <div class="frontpage-splash">
 
-        <img src="assets/video/background-snapshot.jpg" class="frontpage-splash-video"></img>
+        <img src="assets/video/background-snapshot.jpg" class="frontpage-splash-img"></img>
 
-        <video loop muted autoplay poster="assets/video/background.jpg" class="frontpage-splash-video hidden-sm">
+        <video loop muted autoplay poster="assets/video/background.jpg" class="frontpage-splash-video hidden-sm hidden-xs">
             <!-- <source src="videos/big_buck_bunny.webm" type="video/webm"> -->
             <source src="assets/video/background.mp4" type="video/mp4">
             <!-- <source src="videos/big_buck_bunny.ogv" type="video/ogg"> -->
@@ -56,45 +56,46 @@
 
         <nav class="navbar navbar-default collapse navbar-collapse">
             <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">      
-                <a class="navbar-brand" href="/#">
-                    <img alt="header-logo" src="assets/img/deepsee-header-logo.png" style="height: 40px; width: 144px"/>
-                </a>
-            </div>
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header hidden-xs">      
+                    <a class="navbar-brand" href="/#">
+                        <img alt="header-logo" src="assets/img/deepsee-header-logo.png" style="height: 40px; width: 144px"/>
+                    </a>
+                </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div>
 
-                <ul class="nav navbar-nav navbar-right social-nav">
-                    <li>
-                        <a href="https://www.facebook.com/Deepseeio/"><i class="fa fa-lg fa-facebook"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/deepseeio?lang=en"><i class="fa fa-lg fa-twitter"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://medium.com/@deepseeio"><i class="fa fa-lg fa-medium"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><i class="fa fa-lg fa-youtube-play"></i></a>
-                    </li>
-                </ul>
+                    <ul class="nav navbar-nav navbar-right social-nav">
+                        <li>
+                            <a href="https://www.facebook.com/Deepseeio/"><i class="fa fa-lg fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/deepseeio?lang=en"><i class="fa fa-lg fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://medium.com/@deepseeio"><i class="fa fa-lg fa-medium"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><i class="fa fa-lg fa-youtube-play"></i></a>
+                        </li>
+                    </ul>
 
-                <ul class="nav navbar-nav navbar-right link-nav">
-                    <li><a href="/#about">ABOUT</a></li>
-                    <li><a href="/#contact">CONTACT</a></li>   
-                    <li><a href="assets/pdf/whitepaper.pdf">WHITEPAPER</a></li>   
-                </ul>
-            </div>
-        </div><!-- /.container-fluid -->
-    </nav>
+                    <ul class="nav navbar-nav navbar-right link-nav">
+                        <li><a href="/#about">ABOUT</a></li>
+                        <li><a href="/#contact">CONTACT</a></li>   
+                        <li><a href="assets/pdf/whitepaper.pdf">WHITEPAPER</a></li>   
+                    </ul>
+                </div>
+            </div><!-- /.container-fluid -->
+        </nav>
 
     <div class="text-center">
         <!-- <img id="hero-logo-image" src="assets/img/DeepSee-banner-logo.png" /> -->        
 
-        <div id="countdown-announcement"> TOKEN <span class="bold">PRE-SALE</span></div>            
+                    
         <div id="countdown">
+            <div id="countdown-announcement"> TOKEN <span class="bold">PRE-SALE</span></div>
             <div class="timer">
                 <div id="dayElement" class="timer-time"> 00 </div> <span class="timer-title">
                     DAYS
